[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0", features = ["json"]}
tokio = {version = "1", features=["full"]}
serde_json = "1"
serde = {version= "1", features = ["derive"]}
chrono = {version = "0", features= ["serde"]}
anyhow = "1.0.62"
inquire = {git = "https://github.com/Septias/inquire.git", rev="a68d858ca3f7b11c546f6acab6db7263e35667db"}
